# speedy-panda

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  panda.js
.github/workflows/: cmake.yml
dataset/: arq01.txt  arq02.txt  chess.txt
src/: PatternList.h  ResultState.h  TransactionList.h  costutils.cc  costutils.h  main.cc  panda.cc  panda.h
tests/: Panda.test.cc  PatternList.test.cc  ResultState.test.cc  TransactionList.test.cc  common.h  costutils.test.cc
